[L4a] It was a two-DoF robot, not three-DoF.

--- a/basic_lessons/lesson4_exercise_answers.ipynb
+++ b/basic_lessons/lesson4_exercise_answers.ipynb
@@ -185,10 +185,10 @@
     "\n",
     "Then, take the derivative to find the Jacobian.\n",
     "\n",
-    "$$\\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
-    "         1 & 0 & 0 \\\\\n",
-    "         0 & 1 & 0\\\\\n",
-    "         0 & 0 & 0\n",
+    "$$\\mymatrix{J} = \\left[\\begin{array}{cc}\n",
+    "         1 & 0\\\\\n",
+    "         0 & 1\\\\\n",
+    "         0 & 0\n",
     "        \\end{array}\\right].$$"
    ]
   },
@@ -204,9 +204,9 @@
     "# Jacobian is trivial so we don't need to compute each term separately.\n",
     "# As you can see, in this example, it the Jacobian always has the same value.\n",
     "J = np.array(\n",
-    "        [[1, 0, 0],\n",
-    "         [0, 1, 0],\n",
-    "         [0, 0, 0]]\n",
+    "        [[1, 0],\n",
+    "         [0, 1],\n",
+    "         [0, 0]]\n",
     ")\n",
     "print(f\"The analytical Jacobian is always\\n J={J}\")\n"
    ],
