[L5] Fix below to above code.

--- a/basic_lessons/lesson5_tutorial.ipynb
+++ b/basic_lessons/lesson5_tutorial.ipynb
@@ -870,7 +870,8 @@
     "\n",
     "# Suggested exercises\n",
     "\n",
-    "- Try to modify the code below to calculate the control action for a:\n",
+    "Try to modify the code above to calculate the control action for a:\n",
+    "\n",
     "1. `PP` robot\n",
     "2. `RP` robot"
    ]
